--- a/Security Internal/pom.xml
+++ b/Security Internal/pom.xml
@@ -8,7 +8,13 @@
 	<url>http://maven.apache.org</url>
 	
 	<dependencies>
-				<dependency>
+	<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+		<dependency>
+		    <groupId>commons-logging</groupId>
+		    <artifactId>commons-logging</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
 			<version>4.2.1.RELEASE</version>
