--- a/Section3/Video_3.2/SpringSecurity-RememberMeAuthentication/pom.xml
+++ b/Section3/Video_3.2/SpringSecurity-RememberMeAuthentication/pom.xml
@@ -62,6 +62,16 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>4.2.1.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.4.1208.jre7</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-jdbc</artifactId>
+    		<version>4.3.5.RELEASE</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>SpringSecurity-RememberMeAuthentication</finalName>
