--- a/Section3/Video_3.2/SpringSecurity-RememberMeAuthentication/pom.xml
+++ b/Section3/Video_3.2/SpringSecurity-RememberMeAuthentication/pom.xml
@@ -72,6 +72,11 @@
     		<artifactId>spring-jdbc</artifactId>
     		<version>4.3.5.RELEASE</version>
 		</dependency>
+		<dependency>
+    		<groupId>org.springframework.security</groupId>
+    		<artifactId>spring-security-taglibs</artifactId>
+    		<version>4.2.1.RELEASE</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>SpringSecurity-RememberMeAuthentication</finalName>
